Fix spacing on dropdown with label More consistent spacing/padding Fixes https://github.com/Strategy11/business-directory-plugin/pull/292#discussion_r1317913361

--- a/assets/css/less/front-end/components/search/advanced-search.less
+++ b/assets/css/less/front-end/components/search/advanced-search.less
@@ -47,7 +47,7 @@
 			}
 
 			.zipcode-search-zip {
-				margin-bottom: 10px;
+				margin-bottom: @padding-lg;
 			}
 		}
 	}
