--- a/assets/css/less/front-end/components/search/search-box.less
+++ b/assets/css/less/front-end/components/search/search-box.less
@@ -88,18 +88,19 @@
 				display: block !important;
 				position: absolute;
 				top: 50%;
-				right: 15px;
+				right: 24px;
 				width: unset !important;
 				// We don't use a variable here because this code will be moved to
 				// the ZIP Search add-on.
 				// TODO: Remove the above comment after moving the code to the
 				// 		 ZIP Search add-on.
-				color: rgba(63, 75, 91, 0.6);
+				opacity: .8;
 				font-size: 80%;
 				line-height: 1;
 				transform: translateY(-50%);
 				white-space: nowrap;
 				user-select: none;
+				pointer-events: none;
 			}
 		}
 	}
