--- a/assets/css/less/front-end/components/submit-listing/checkout.less
+++ b/assets/css/less/front-end/components/submit-listing/checkout.less
@@ -54,8 +54,8 @@
 
 .wpbdp-payment-receipt {
     border: 1px solid @color-neutral-300;
-    padding: 1.0em 1.5em;
-    margin: 1.5em 0;
+    padding: @padding-md @padding-lg;
+    margin: @padding-lg 0;
     font-size: 90%;
 
     h4 {
@@ -72,7 +72,7 @@
     }
 
     .wpbdp-payment-receipt-details {
-        margin: 1.5em 0.5em;
+        margin: @padding-lg @padding-sm;
 
         dl {
             margin: 0;
