--- a/assets/css/less/front-end/components/submit-listing/listing-done-section.less
+++ b/assets/css/less/front-end/components/submit-listing/listing-done-section.less
@@ -64,7 +64,7 @@
 		}
 
 		.wpbdp-payment-receipt-details {
-			margin-bottom: 30px;
+			margin-bottom: @padding-lg;
 
 			dl {
 				margin: 0;
