--- a/assets/css/less/front-end/elements/alerts.less
+++ b/assets/css/less/front-end/elements/alerts.less
@@ -7,13 +7,12 @@
 .wpbdp-msg {
 	border: 1px solid @border-main;
 	border-radius: @border-radius-main;
-	padding: 19px 25px;
-	margin: 30px 0;
+	padding: @padding-md @padding-lg;
+	margin: @padding-lg 0;
 	background-color: @color-warning;
 	border-color: darken( @color-warning, 10% );
-	color: @color-neutral-600;
 	font-size: @font-size-md;
-	line-height: @line-height;
+	opacity: .9;
 
 	&.error,
 	&.wpbdp-error {
