--- a/assets/css/less/front-end/elements/forms.less
+++ b/assets/css/less/front-end/elements/forms.less
@@ -43,7 +43,7 @@
 	.select2 .select2-selection {
 		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='8' fill='none' viewBox='0 0 14 8'%3E%3Cpath stroke='%23000' stroke-linecap='round' stroke-linejoin='round' d='m1 1 6 6 6-6'/%3E%3C/svg%3E%0A") !important;
 		background-size: 12px 6px !important;
-		background-position: right 15px center !important;
+		background-position: right 9px center !important;
 		background-repeat: no-repeat !important;
 		appearance: none !important;
 		cursor: pointer;
@@ -107,7 +107,7 @@
 		color: @red;
 	}
 	.wpbdp-form-field {
-		margin-bottom: 23px;
+		margin-bottom: @padding-lg;
 	}
 	/* Attachment Input */
 	input[type="file"]::file-selector-button {
